--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,105 @@ html, body {
 	background-image: url("../imgs/ricepaper.png");
 }
 
-.logo {
-	z-index: -1;
-}
 .aang {
-
 	margin-bottom: -100px;
-	z-index: -100;
 }
+
+#result {
+	text-align: center;
+	font-family: 'Nanum Myeongjo', serif;
+	font-weight: 800;
+	font-size: 40px;
+	letter-spacing: 3px;
+	color:#997d52;
+}
+
+.elements {
+	background-image: url("../imgs/brush.png");
+	background-repeat: no-repeat;
+	background-position: top center;
+}
+
+@media only screen and (max-width: 991px){
+	.elements {
+		background-image: none;
+	}
+}
+
 .element {
 	width: 300px;
+}
+
+.lora {
+	font-family: 'Lora', serif;
+	font-size: 20px;
+	color: #5e554f;
+}
+
+.score {
+	font-size: 35px;
+	font-weight: 700;
+	font-style: italic;
+	color: #90837b;
+}
+
+.botder {
+	border: 2px solid blue;
+}
+
+.fill {
+	flex-grow:1;
+}
+
+.center {
+	display: block;
+	margin: auto;
+	text-align: center;
+}
+
+#strength {
+	color: #c46500;
+}
+
+#userStrength {
+	color: #5eac5a;
+}
+
+/* Pulse */
+@-webkit-keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+@keyframes hvr-pulse {
+  25% {
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+  }
+  75% {
+    -webkit-transform: scale(0.9);
+    transform: scale(0.9);
+  }
+}
+.hvr-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.hvr-pulse:hover, .hvr-pulse:focus, .hvr-pulse:active {
+  -webkit-animation-name: hvr-pulse;
+  animation-name: hvr-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
