Adjust positioning of background on elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ html, body {
 
 @media only screen and (max-width: 991px){
 	.elements {
-		background-image: none;
+		background-size: 75%;
 	}
 
 	#result {
